# OsgVisualization

./: .gitignore  LICENSE  README.md  conanfile.py  install_with_profile.bat
cmake/: CMakeLists.txt  conan.cmake
include/: AbstractOsgDisplayDescriptor.h  CameraGeometry.h  DisplayableAreaLights.h  DisplayableCameras.h  DisplayableCoordinateSystem.h  DisplayableGrid.h  DisplayableWalls.h  FunctionalOsgDisplayDescriptor.h  GeometryDisplayer.h  GridGeometry.h  OsgDisplayDescriptorWidget.h  OsgDisplayable.h  OsgGenericVisualizationWidget.h  OsgGeometryManager.h  QtOsgWidget.h  TypeErasedOsgDisplayDescriptor.h  WallsGeometry.h  osg_stream_operators.h  osg_utils.h
src/: AbstractOsgDisplayDescriptor.cpp  CameraGeometry.cpp  DisplayableAreaLights.cpp  DisplayableCameras.cpp  DisplayableCoordinateSystem.cpp  DisplayableGrid.cpp  DisplayableWalls.cpp  GridGeometry.cpp  OsgDisplayDescriptorWidget.cpp  OsgDisplayable.cpp  OsgGenericVisualizationWidget.cpp  OsgGeometryManager.cpp  QtOsgWidget.cpp  WallsGeometry.cpp  osg_utils.cpp
test/: CMakeLists.txt
test/common/: osgCommonObjects_test.h
test/test_displayDescriptor/: conanfile.py
test/test_displayDescriptor/cmake/: CMakeLists.txt
test/test_displayDescriptor/src/: main.cpp
test/test_displayable/: conanfile.py
test/test_displayable/cmake/: CMakeLists.txt
test/test_displayable/src/: main.cpp
ui/: OsgDisplayDescriptorWidget.ui  OsgGenericVisualizationWidget.ui
