CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT( OsgCommonObjects_Test_DisplayDescriptor )

message("AAA: ${UI_INCLUDE_DIR}")

FIND_PACKAGE( Qt5Core )
FIND_PACKAGE( Qt5Widgets )
FIND_PACKAGE( Qt5Gui )
FIND_PACKAGE( Qt5OpenGL )

INCLUDE_DIRECTORIES(
	../../../include
	../../common
	${UI_INCLUDE_DIR}
)

ADD_EXECUTABLE( ${PROJECT_NAME}
	../src/main.cpp
)

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
	Qt5::Core
	Qt5::Gui
	Qt5::OpenGL
	Qt5::Widgets
	Glu32
	Opengl32
	OsgVisualization
	CONAN_PKG::Parametrizable
	CONAN_PKG::Roi3DF
	CONAN_PKG::openscenegraph
)

CONAN_TARGET_LINK_LIBRARIES(${PROJECT_NAME})

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Tests")

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)